# nmt

./: .clang-format  .gitignore  1_build_conan.sh  2_build_nonconan.sh  2_configure.sh  3_build_install.sh  3_configure.sh  3_configure_nmt.sh  3_configure_nmt_only.sh  4_configure_full.sh  4_configure_second.sh  4_make_nmt.sh  5_configure_all.sh  CMakeLists.txt  NmtAppImpl.h  README.md  a.cpp  clang-format-all.sh  conanfile.txt  fn_test.h  notes.txt  tmp.cpp
nmt0/: .gitignore  1_build_conan.sh  2_make_install.sh  CMakeLists.txt  conanfile.txt
nmt0/src/: CMakeLists.txt  PreprocessSource.cpp  PreprocessSource.h  ReadFile.h  ReadFileAsLines.h  Trim.cpp  TryEatSpecialComment.cpp  fn_EatSpace.h  fn_EntityKindOfStem.h  fn_ParseFunctionDeclaration.h  fn_ParseOpaqueEnumDeclaration.h  fn_ParseStructClassDeclaration.h  fn_PreprocessSource.h  fn_ReadArgs.h  fn_TryEatSpecialComment.h  fn_fs_exists_total.h  fn_main.h  fn_reinterpret_as_u8string_view.h  main.cpp  parse.cpp  parse.h  pch.h  sc_Args.h  sc_PreprocessedSource.h
nmt0/src/boilerplate/: fn_CompactSpaces.cpp  fn_CompactSpaces.h  fn_EatBlank.cpp  fn_EatBlank.h  fn_EatSpace.cpp  fn_EatSpace.h  fn_EatWhileNot.cpp  fn_EatWhileNot.h  fn_EntityKindLongName.cpp  fn_EntityKindLongName.h  fn_EntityKindOfStem.cpp  fn_EntityKindOfStem.h  fn_EntityKindShortName.cpp  fn_ExtractIdentifier.h  fn_ExtractIdentitier.cpp  fn_ParseFunctionDeclaration.cpp  fn_ParseFunctionDeclaration.h  fn_ParseOpaqueEnumDeclaration.cpp  fn_ParseOpaqueEnumDeclaration.h  fn_ParseStructClassDeclaration.cpp  fn_ParseStructClassDeclaration.h  fn_PreprocessSource.cpp  fn_PreprocessSource.h  fn_ReadArgs.cpp  fn_ReadFile.cpp  fn_ReadFile.h  fn_ReadFileAsLines.cpp  fn_ReadFileAsLines.h  fn_Trim.cpp  fn_Trim.h  fn_TryEatPrefix.cpp  fn_TryEatPrefix.h  fn_TryEatSpecialComment.cpp  fn_TryEatSpecialComment.h  fn_WriteFile.cpp  fn_WriteFile.h  fn_fs_exists_total.cpp  fn_main.cpp  fn_reinterpret_as_string_view.cpp  fn_reinterpret_as_string_view.h  (+6 more)
src/: CMakeLists.txt  enum_EntityKind.h  fn_CompactSpaces.cpp  fn_EatBlank.cpp  fn_EatBlank.h  fn_EatSpace.cpp  fn_EatWhileNot.cpp  fn_EatWhileNot.h  fn_EntityKindLongName.cpp  fn_EntityKindOfStem.cpp  fn_EntityKindOfStem.h  fn_EntityKindShortName.cpp  fn_EntityKindShortName.h  fn_ExtractIdentitier.cpp  fn_ParseFunctionDeclaration.cpp  fn_ParseOpaqueEnumDeclaration.cpp  fn_ParseStructClassDeclaration.cpp  fn_PreprocessSource.cpp  fn_ReadArgs.cpp  fn_ReadArgs.h  fn_ReadFile.cpp  fn_ReadFileAsLines.cpp  fn_Trim.cpp  fn_TryEatPrefix.cpp  fn_TryEatSpecialComment.cpp  fn_TryEatSpecialComment.h  fn_WriteFile.cpp  fn_fs_exists_total.cpp  fn_fs_exists_total.h  fn_main.cpp  fn_reinterpret_as_string_view.cpp  fn_reinterpret_as_u8string_view.cpp  fn_reinterpret_as_u8string_view.h  fn_reinterpret_u8string_view.cpp  fn_reinterpret_u8string_view.h  sc_Args.h  sc_Entity.h  sc_PreprocessedSource.h  sc_SpecialComment.h
src/appcommon/: CMakeLists.txt  appcommon.cpp  pch.h
src/appcommon/#/: #.h  ProjectTreeView.h  UI.h  UserState.h
src/appcommon/#/UserState/: setProject.h
src/common/: CMakeLists.txt  sc_UI.h
src/helloqt/: CMakeLists.txt  fn_main.h
src/nmt/: CMakeLists.txt  main.cpp  pch.h
src/nmt/src/: CMakeLists.txt  PreprocessSource.cpp  ReadFile.cpp  ReadFileAsLines.cpp  SpecialComment.h  TokenSearch.h  TryEatSpecialComment.cpp  TryEatSpecialComment.h  WriteFile.h  data.h  enum_EntityKind.h  enums.cpp  enums.h  fn_CompactSpaces.h  fn_EntityKindLongName.h  fn_EntityKindShortName.h  fn_ExtractIdentifier.h  fn_ParseEnum.h  fn_ParseFn.h  fn_ParseOpaqueEnumDeclaration.h  fn_ParseStructClass.h  fn_reinterpret_as_u8string_view.h  main.cpp  parse.cpp  pch.h  sc_Args.h
src/nmt/src/boilerplate/: enum_EntityKind.h  fn_CompactSpaces.cpp  fn_CompactSpaces.h  fn_EntityKindLongName.cpp  fn_EntityKindLongName.h  fn_EntityKindShortName.cpp  fn_EntityKindShortName.h  fn_ExtractIdentitier.cpp  fn_ParseFunctionDeclaration.cpp  fn_ParseOpaqueEnumDeclaration.h  fn_ParseStructClassDeclaration.h  fn_WriteFile.cpp  fn_fs_exists_total.h  fn_reinterpret_as_string_view.cpp
src/nmt1/: CMakeLists.txt
src/nmtapp/: CMakeLists.txt  NmtApp.cpp  NmtApp.h
src/nmtapp/#/: NmtApp.h
src/nmtapp/#/NmtApp/: make.h
src/nmtapp/#/NmtAppImpl/: run.h
src/nmtapplogic/: CMakeLists.txt
src/nmtapplogic/#/: NmtApp.h  NmtAppImpl.h
src/nmtapplogic/#/NmtApp/: make.h
src/nmtapplogic/#/NmtAppImpl/: NmtAppImpl.h  run.h  ~NmtAppImpl.h
src/nmtlib/: CMakeLists.txt  Entity.cpp  GenerateBoilerplate.cpp  GeneratedFileWriter.cpp  GeneratedFileWriter.h  ParsePreprocessedSource.cpp  ParsePreprocessedSource.h  PreprocessSource.cpp  PreprocessSource.h  ProcessSource.cpp  ProcessSource.h  Project.cpp  ResolveSourcesFromCommandLine.cpp  TokenSearch.h  TryEatSpecialComment.cpp  TryEatSpecialComment.h  WriteFile.cpp  data.h  enums.cpp  fn_ExtractIdentifier.h  nmtutil.cpp  nmtutil.h  pch.h
src/qt/: CMakeLists.txt
src/qt/nmtqt/: CMakeLists.txt  fn_nmtqt_main.h
src/qt/nmtqtapp/: CMakeLists.txt
src/qt/qtui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.hpp  ProjectTreeItemModel.cpp  ProjectTreeItemModel.h  QtUI.cpp  QtUI.h  QtUI.hpp  pch.h
src/s/: db.tsv  enum_EntityKind.h  enum_EntityKind_decl.h  fn_CompactSpaces.h  fn_EatBlank.h  fn_EatWhileNot.h  fn_EntityKindLongName.h  fn_EntityKindOfStem.h  fn_EntityKindShortName.h  fn_ExtractIdentifier.h  fn_ParseFunctionDeclaration.h  fn_ParseOpaqueEnumDeclaration.h  fn_ParseStructClassDeclaration.h  fn_PreprocessSource.h  fn_ReadArgs.h  fn_ReadArgs_decl.h  fn_ReadArgs_def.h  fn_ReadFile.h  fn_ReadFileAsLines.h  fn_Trim.h  fn_TryEatPrefix.h  fn_TryEatSpecialComment.h  fn_WriteFile.h  fn_main.h  fn_main_def.h  fn_reinterpret_as_string_view.h  fn_reinterpret_u8string_view.h  fn_reinterpret_u8string_view_decl.h  fn_reinterpret_u8string_view_def.h  sc_Args.h  sc_Args_decl.h  sc_Entity.h  sc_Entity_decl.h  sc_SpecialComment.h
src/util/: CMakeLists.txt  ReadFileAsLines.cpp  enum_traits.cpp  error.cpp  error_test.cpp  stlext.cpp  stlext_test.cpp  util.cpp  vx.cpp
src/util/util/: enum_traits.h  error.h  stlext.h  vx.hpp
(+49 files in other folders)
